# bpcp

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  USAGE-zh.md
book-list/cmake/: FindGLIB.cmake
book-list/minigui/: customized-compositor.c
book-list/purc/include/: purc-version.h
book-list/samples/: asprintf.c  bool.c  check-args.c  foo.c  hello-pi-cpp-full.c  hello-pi-cpp.c  hello-pi.c  hello-short.c  hello-world-function-pointer.c  hello-world-macro.c  hello-world-no-header.c  strdupa-c99.c  strdupa-full.c  strdupa.c  warning-bool.c  warning-format.c  warning-strdup.c
docs/: abstract-data-types.html  abstract-data-types.md  coding-for-performance.html  coding-for-performance.md  constants.html  constants.md  cross-end-app-trends-and-practices.html  cross-end-app-trends-and-practices.md  cross-end-app.html  cross-end-app.md  decoupling-algorithms-and-data.html  decoupling-algorithms-and-data.md  design-for-performance.html  design-for-performance.md  discussion.html  discussion.md  dynamicly-loading-modules.html  dynamicly-loading-modules.md  efficient-debugging.html  efficient-debugging.md  extending-interfaces-and-compatibility.html  extending-interfaces-and-compatibility.md  headers.html  headers.md  hvml-data-types-and-expressions.html  hvml-data-types-and-expressions.md  hvml-en.html  hvml-overview-en.html  hvml-overview-en.md  hvml-overview.html  hvml-overview.md  hvml.html  index.html  interface-design-patterns.html  interface-design-patterns.md  linux-desktop-problems-and-solutions.html  linux-desktop-problems-and-solutions.md  linux-desktop.html  maintainability.html  maintainability.md  (+20 more)
source/aple/lecture-2/: dup.c  fork.c
source/aple/lecture-3/: daemonize.c  fork.c  signalfd.c  sigset.c  sleep.c  system.c  timerfd.c
source/aple/lecture-3/homework-wushixiong/: fake_cron.c  test.cfg
source/cmake/: GlobalCCache.cmake  GlobalCommon.cmake  GlobalDist.cmake  GlobalFS.cmake  GlobalFindPackage.cmake  GlobalMacros.cmake  OptionsAppleWin.cmake  OptionsLinux.cmake  OptionsMac.cmake  OptionsWin.cmake
source/foobar/: CMakeLists.txt  MyMacros.cmake  config.h
source/foobar/bar/: context.h
source/foobar/constants/: compile-time-assert.c  enum.c  string-literal.c
source/foobar/foo/: context.h
source/foobar/include/: foobar.h  foobar_macros.h
source/foobar/include/private/: debug.h  instance.h  utils-bad.h
source/foobar/warnings/: format.c  gets.c  others.c  preprocessor.c  typesafe.c  unused.c
source/samples/: bubble_sort.c  comma.c  count_one_bits_v3.c  fgets.c  find-key-in-sorted-array.c  find-key-in-sorted-array.h  getchar.c  hello.c  malloc-1.c  malloc-2.c  narcissus_numbers.c  plusplus.c  prime_factors-glib.c  primes.cpp  replace_char.c  reverse_print_string.c  scanf.c  scanf_s.c  sinx.c  sort.c  sort_three_integers.c  split_array-tuned.c  split_array.c  stack-data.c  stack-printf.c  static-data-1.c  static-data-2.c  str2key.c  strtok.c  strtok_r.c  while.c
src/: CMakeLists.txt
src/cmake/: GlobalCompilerFlags.cmake  GlobalFS.cmake  GlobalFeatures.cmake  GlobalPackaging.cmake  OptionsCommon.cmake  OptionsLinux.cmake  OptionsMSVC.cmake  OptionsMac.cmake  OptionsWindows.cmake
src/foobar/: CMakeLists.txt
src/foobar/bar/: bar.c
src/foobar/foo/: foo.c
src/foobar/include/: foobar.h  foobar_features.h.in  foobar_version-bad.h  foobar_version.h.in
src/foobar/include/private/: bar.h  foo.h  instance.h  list.h  utils-bad.h  utils.h
src/foobar/instance/: features.c  instance.c
src/foobar/ports/: vasprintf.c
src/foobar/ports/linux/: foobar.pc.in
src/foobar/utils/: debug.c
src/foobar/warnings/: bin2c.c  bugs-not-warned.c  lexical.c  others.c  qsort_r.c  typesafe.c  uninitialized.c
src/samples/: argument.c  bubble_sort.c  comma.c  count_one_bits_v1.c  count_one_bits_v2.c  count_one_bits_v3.c  fgets.c  getchar.c  malloc-2.c  malloc-3.c  malloc-without-free.c  narcissus_numbers.c  plusplus.c  prime_factors.c  replace_char.c  reverse_print_string.c  reverse_string.c  scanf.c  scanf_m.c  scanf_s.c  sinx.c  sort.c  sort_three_integers.c  split_array.c  str2key.c  while.c
src/wtf/: CMakeLists.txt
src/wtf/wtf/: CMakeLists.txt
tools/: generate_toc.awk
